@@ -26,6 +26,9 @@
 	* tmac/tests/doc_synopsis_is_not_adjusted.sh: Update amount of
 	indentation expected in output.
 
+	* tmac/groff_man.7.man.in:
+	* tmac/groff_mdoc.7.man: Document it.
+
 	Fixes <https://savannah.gnu.org/bugs/?64018>.  Thanks to
 	Thorsten Glaser and Ingo Schwarze for the discussion.
 
